# dtransient-rendering

./: CMakeLists.txt  Dockerfile  README.md  install.sh  install_docker.sh  license.txt  setup.py
include/: bsdf.h  cameratransient.h  config.h  fwd.h  integrator.h  integratorAD.h  integratorADps.h  intersection.h  intersectionAD.h  ptr.h  scene.h
pydtrr/: __init__.py  auto_grad.py  auxiliary.py  bsdf.py  camera.py  image.py  load_mitsuba.py  load_obj.py  medium.py  phase.py  scene_manager.py  scene_renderer.py
scenes/egg/: license.txt  run.py  scene.xml
src/: cameratransient.cpp  dtrr.cpp  scene.cpp  shape.cpp
src/bsdf/: roughdielectric.cpp  roughdielectric.h
src/integrator/: bdpt.cpp  bdpt.h
src/integrator/differential/: bdptAD.cpp  bdptAD.h  bdptADbb.cpp  bdptADbb.h  bidir_utils.cpp  bidir_utils.h  integratorAD.cpp  integratorADps.cpp
